objects/ASI_TnE_Route_Rule_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_TnE_Amount_Threshold__c</fullName>
        <label>Amount Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Approver_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_TnE_Route_Rule_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Approver_Type__c</fullName>
        <label>Approver Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Line Manager</fullName>
                </value>
                <value>
                    <fullName>Checker</fullName>
                </value>
                <value>
                    <fullName>Additional Approver</fullName>
                </value>
                <value>
                    <fullName>BU Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Route_Type__c</fullName>
        <label>ASI TnE Route Type</label>
        <referenceTo>ASI_TnE_Route_Type__c</referenceTo>
        <relationshipLabel>ASI TnE Route Rule Details</relationshipLabel>
        <relationshipName>ASI_TnE_Route_Rule_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ASI TnE Route Rule Detail</label>
    <nameField>
        <displayFormat>RRID{000000}</displayFormat>
        <label>Route Rule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI TnE Route Rule Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>